logstash_k8s_setup.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash
  labels:
    app: logstash
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logstash
  template:
    metadata:
      labels:
        app: logstash
    spec:
      containers:
      - resources:
        limits:
          cpu: 300m
          ephemeral-storage: 10Gi
          memory: 368Mi
        requests:
          cpu: 300m
          ephemeral-storage: 1Gi
          memory: 368Mi
        name: logstash
        image: docker.elastic.co/logstash/logstash:9.1.3
        ports:
        - containerPort: 5044
        - containerPort: 5045
        volumeMounts:
        - name: logstash-config
          mountPath: /usr/share/logstash/pipeline/
      volumes:
      - name: logstash-config
        configMap:
          name: logstash-config
---
apiVersion: v1
kind: Service
metadata:
  name: logstash
spec:
  type: LoadBalancer   # or ClusterIP if only internal
  selector:
    app: logstash
  ports:
    - name: http-input
      port: 5044
      targetPort: 5044
    - name: beats-input
      port: 5045
      targetPort: 5045
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: logstash
spec:
  path: /
  to:
    kind: Service
    name: logstash
    weight: 100
  port:
    targetPort: http-input
  tls:
    termination: edge
  wildcardPolicy: None
